[package]
name = 'libra'
version = '0.0.0'
description = 'Libra node'
authors = ['AtScale Technologies <https://github.com/atscaletech>']
homepage = 'https://atscale.xyz/'
edition = '2021'
license = 'Unlicense'
publish = false
repository = 'https://github.com/atscaletech/libra'
build = 'build.rs'

[[bin]]
name = "libra"

[dependencies]
structopt = "0.3.25"

sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16", features = ["wasmtime"] }
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16", features = ["wasmtime"] }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }
sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }

# These dependencies are used for the node template's RPCs
jsonrpc-core = "18.0.0"
sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16", default-features = false }

# Run time
libra-runtime = { path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }

[features]
default = []
runtime-benchmarks = ["libra-runtime/runtime-benchmarks"]
