[package]
name = 'currencies-registry'
version = '0.0.0'
description = 'Currencies registry of Libra Network'
authors = ['AtScale <https://github.com/atscaletech>']
homepage = 'https://atscale.xyz/'
edition = '2021'
license = 'Apache License 2.0'
publish = false
repository = 'https://github.com/atscaletech/libra/'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.124", optional = true, default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "1.0", default-features = false, features = [
	"derive",
] }

frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }

frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16", optional = true }

[dev-dependencies]
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.16" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
]

runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]